--- a/src/vue-001/package.json
+++ b/src/vue-001/package.json
@@ -11,6 +11,7 @@
     "type-check": "vue-tsc --build"
   },
   "dependencies": {
+    "daisyui": "^5.0.27",
     "pinia": "^3.0.1",
     "unplugin-vue-router": "^0.12.0",
     "vue": "^3.5.13",
