--- a/src/vue-001/package.json
+++ b/src/vue-001/package.json
@@ -11,18 +11,19 @@
     "type-check": "vue-tsc --build"
   },
   "dependencies": {
+    "axios": "^1.9.0",
     "pinia": "^3.0.1",
+    "unplugin-vue-router": "^0.12.0",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.0",
-    "unplugin-vue-router": "^0.12.0"
+    "vue-router": "^4.5.0"
   },
   "devDependencies": {
-    "daisyui": "^5.0.27",
     "@tailwindcss/vite": "^4.1.4",
     "@tsconfig/node22": "^22.0.1",
     "@types/node": "^22.14.0",
     "@vitejs/plugin-vue": "^5.2.3",
     "@vue/tsconfig": "^0.7.0",
+    "daisyui": "^5.0.27",
     "npm-run-all2": "^7.0.2",
     "tailwindcss": "^4.1.4",
     "typescript": "~5.8.0",
