--- a/src/vue-001/package.json
+++ b/src/vue-001/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "axios": "^1.9.0",
+    "lodash": "^4.17.21",
     "pinia": "^3.0.1",
     "unplugin-vue-router": "^0.12.0",
     "vue": "^3.5.13",
