--- a/src/vue-001/public/app.config.json
+++ b/src/vue-001/public/app.config.json
@@ -1,6 +1,9 @@
 {
-  "settings": {
-    "baseUrl": "https://api.example.com"
+  "fbl": {
+    "module01": {
+      "setting": {
+        "baseUrl": "https://www.example.com"
+      }
+    }
   }
 }
-  
