--- a/src/vue-001/package.json
+++ b/src/vue-001/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "axios": "^1.9.0",
+    "lodash.merge": "^4.6.2",
     "pinia": "^3.0.1",
     "unplugin-vue-router": "^0.12.0",
     "vue": "^3.5.13",
@@ -20,6 +21,7 @@
   "devDependencies": {
     "@tailwindcss/vite": "^4.1.4",
     "@tsconfig/node22": "^22.0.1",
+    "@types/lodash.merge": "^4.6.9",
     "@types/node": "^22.14.0",
     "@vitejs/plugin-vue": "^5.2.3",
     "@vue/tsconfig": "^0.7.0",
