--- a/src/fbl-ovp-demo/package.json
+++ b/src/fbl-ovp-demo/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.9.0",
     "lodash.merge": "^4.6.2",
     "pinia": "^3.0.1",
+    "pinia-plugin-persistedstate": "^4.2.0",
     "unplugin-vue-router": "^0.12.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
