--- a/doc/docker-compose.yml
+++ b/doc/docker-compose.yml
@@ -10,6 +10,17 @@ services:
       - C:/Bamboo/data:/var/atlassian/application-data/bamboo
     networks:
       - devops-net
+  bamboo-agent:
+    container_name: bamboo-agent
+    build:
+      context: .
+      dockerfile: Dockerfile.bamboo-agent
+    environment:
+      - BAMBOO_SERVER_URL=http://bamboo:8085
+    volumes:
+      - C:/Bamboo/agent:/home/bamboo-agent
+    networks:
+      - devops-net
 
 networks:
   devops-net:
